# goit-pythonweb-hw-06

./: .env.example  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: e0d6000afc38_change_teacher_and_subject_so_that_one_.py  f2f5b6f47186_init.py
conf/: db.py
entity/: models.py
